--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.7.2",
     "@vitejs/plugin-vue": "^3.0.3",
+    "naive-ui": "^2.33.2",
     "sass": "^1.54.4",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
